style.css
@import url(https://unpkg.com/modern-css-reset);
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/fontawesome.min.css);
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/regular.min.css);
@import url(https://unpkg.com/simple-line-icons);

/* * { border: 1px solid red; } */

/* Colors */
@media all {
  :root {
    --color-primary-highlight: #000;

    --color-primary-tint-1: #212121;
    --color-primary-tint-2: #292929;
    --color-primary-tint-3: #646464;

    --color-secondary-highlight: #fff;

    --color-secondary-tint-1: #e7e7e7;
    --color-secondary-tint-2: #dedede;
    --color-secondary-tint-3: #b9b9b9;
  }
  @media (prefers-color-scheme: dark) {
    :root {
      --color-primary-highlight: #fff;

      --color-primary-tint-1: #d0d0d0;
      --color-primary-tint-2: #c7c7c7;
      --color-primary-tint-3: #a2a2a2;

      --color-secondary-highlight: #000;

      --color-secondary-tint-1: #212121;
      --color-secondary-tint-2: #292929;
      --color-secondary-tint-3: #535353;
    }
  }
}
/* Defaults */
@media all {
  * {
    color: var(--color-primary-tint-1);
    font-family: "Roboto Condensed", sans-serif;

    user-select: none;
    -webkit-tap-highlight-color: transparent;
  }
  html {
    box-sizing: border-box;
    scroll-behavior: smooth;
  }
  body {
    background-color: var(--color-secondary-tint-1);

    padding: 2.5%;

    display: flex;
    flex-direction: column;
  }
  p {
    text-align: justify;
    text-justify: inter-word;
  }
  a {
    text-decoration: none;
  }
  :focus {
    outline-color: var(--color-primary-tint-3);
  }
  @media (min-width: 50em) {
    body {
      font-size: 2.25vw;
    }
  }
  @media (min-width: 75em) {
    body {
      font-size: 1.5vw;
    }
  }
}
/* High-order components */
@media all {
  body > header,
  body > footer {
    text-align: center;
  }
  body > header,
  body > nav,
  body > main {
    display: flex;
    flex-flow: column;
  }
  body > header,
  body > main,
  body > footer {
    max-width: 90%;
    margin: 0 auto;
    padding: 0.375em 0;
  }
  @media (min-width: 50em) {
    body > header,
    body > main,
    body > footer {
      width: 70%;
    }
  }
  @media (min-width: 70em) {
    body > header,
    body > main,
    body > footer {
      width: 55vw;
    }
  }
}
/* Nav */
@media all {
  nav * {
    justify-content: space-around;

    color: var(--color-primary-tint-3);
  }
  @media (min-width: 50em) {
    nav > * {
      justify-content: space-between;
    }
  }
}
/* Header */
@media all {
  body > header {
    align-items: center;

    flex-flow: row wrap;
    justify-content: space-between;

    text-shadow: 3px 3px 1px var(--color-secondary-highlight);

    column-gap: 5vw;
    transition: all 0.4s ease-in-out;
  }
  @media (min-width: 50em) {
    body > header > :first-child {
      flex-grow: 2;

      padding-right: 5em;
    }
    body > header > :last-child {
      flex-grow: 5;
    }
    body > header.sticky {
      position: sticky;
      top: 0;
      padding-top: 1.5%;
      overflow-y: hidden;

      background: var(--color-secondary-tint-1);
      border-bottom: 0.075em solid var(--color-primary-tint-1);
    }
  }
  @media (max-width: 50em) {
    body > header {
      flex-flow: column nowrap;
      justify-content: space-around;
    }
    body > header > label {
      font-size: 1.25em;
      margin-bottom: 3vh;
    }
    body > header > :last-child {
      width: 100%;
    }
  }
}
/* Main */
@media all {
  main {
    flex: 1 0 auto;
  }
  main header,
  main p {
    padding: 0 0 1em;
  }
}
/* Footer */
@media all {
  footer {
    display: flex;
    flex-flow: row nowrap;
    align-items: stretch;
    justify-content: center;
    flex-shrink: 0;

    margin: 0 auto;
    padding: 1em 0;
  }
  footer > * {
    margin: 0 0.75em;
  }
  footer section {
    display: flex;
    justify-content: space-between;
  }
  footer section:first-child {
    flex-flow: column;
  }
  footer a {
    display: inline-block;
  }
  footer em {
    color: var(--color-primary-tint-3);
  }
}

/* Ids / Classes */

/* Horizontal menu */
@media all {
  ul.horizontal {
    display: flex;

    padding: 0;
    margin: 0;

    list-style: none;
  }
  ul.horizontal label > * {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
  }
  ul.horizontal.dispersed {
    justify-content: space-between;
  }
}
/* Squared */
@media all {
  section.squared canvas {
    width: 100%;
    height: auto;
  }
  @media (min-width: 50em) {
    section.squared {
      min-width: 15%;
      min-height: 15%;
    }
  }
}
/* Pagination */
@media all {
  input.paged[type="radio"],
  input.paged[type="radio"] + section {
    display: none;
  }
  input.paged[type="radio"]:checked + section {
    display: block;
  }
  label.paged {
    cursor: pointer;
  }
  li.paged.selected * {
    color: var(--color-primary-highlight);
  }
  li.paged.selected span {
    font-weight: 600;
  }
}
/* Neutral styles */
@media all {
  .undisplayed {
    display: none;
  }
  .transparent {
    transition: 0.75s ease;
    opacity: 0;
  }
}
/* Simple Line Icons */
@media all {
  .icons {
    font-size: 2em;
  }
}
/* Articles */
@media all {
  #articles {
    display: flex;
    flex-flow: column nowrap;
    gap: 2.5vh 1vw;

    margin-bottom: 1em;
  }
  #articles article {
    height: 3em;
    padding: 0.5em 1em;
    overflow: hidden;

    background-color: var(--color-secondary-tint-2);
    border-radius: 0.5em;
  }
  #articles p {
    font-family: Futura, serif;
  }
  #articles article:hover {
    transform: scale(1.02);
    transition: all 0.3s ease-in-out;
  }
  #articles input.paged[type="radio"]:checked + label article {
    height: auto;
    transform: none;
  }
}
/* To Top */
@media all {
  #to-top {
    display: flex;
    justify-content: center;
    align-items: center;

    position: fixed;
    right: 5.5vw;
    bottom: 5vh;

    width: 6em;
    height: 6em;

    border-radius: 50%;
    font-size: 0.5em;
    text-align: center;

    background-color: var(--color-secondary-tint-1);
  }
  #to-top,
  #to-top * {
    transition: all 0.3s ease-in;
  }
  #to-top em {
    font-weight: bolder;
  }
  #to-top,
  #to-top:hover {
    border: 0.125em solid var(--color-primary-tint-3);
  }
  #to-top:hover {
    background-color: var(--color-primary-tint-1);
    border-color: var(--color-primary-tint-1);
  }
  #to-top:hover em {
    color: var(--color-secondary-tint-1);
  }
  @media (min-width: 30em) {
    #to-top {
      right: 15.5vw;
      bottom: 5vh;
    }
  }
  @media (min-width: 50em) {
    #to-top {
      right: 21.5vw;
      bottom: 5vh;
    }
  }
  @media (min-width: 70em) {
    #to-top {
      width: 6em;
      height: 6em;

      right: 27.5vw;
      bottom: 10vh;
    }
  }
}

